--- a/LSTMv2AR.ipynb
+++ b/LSTMv2AR.ipynb
@@ -648,11 +648,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feedback_model.save_weights(\"Models/feedbackWeights4.h5\")"
+    "feedback_model.save_weights(\"Models/BenchmarkAR.h5\")"
    ]
   }
  ],
