Changed Window To Input Pipeline with different strategys

--- a/LSTMv2AR.ipynb
+++ b/LSTMv2AR.ipynb
@@ -117,8 +117,13 @@
    "source": [
     "n = Data.shape[1]\n",
     "train_df = Data[:, 0:int(n*0.7):]\n",
+    "meta_train_df = InputData.T[:, 0:int(n*0.7):]\n",
+    "\n",
     "val_df = Data[:,int(n*0.7):int(n*0.9):]\n",
+    "meta_val_df = InputData.T[:,int(n*0.7):int(n*0.9):]\n",
+    "\n",
     "test_df = Data[:,int(n*0.9):]\n",
+    "meta_test_df = InputData.T[:,int(n*0.9):]\n",
     "\n",
     "num_features = Data.shape[1]\n"
    ]
@@ -182,10 +187,20 @@
     "                               train_df=train_df,\n",
     "                               val_df=val_df,\n",
     "                               test_df=test_df,\n",
-    "                               batch_size = 200)\n",
+    "                               batch_size = 200,\n",
+    "                               md_train_df =meta_train_df, md_test_df =meta_test_df,md_val_df=meta_val_df)\n",
     "\n",
     "multi_window.plotexample()\n",
     "multi_window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multi_window.make_dataset(data=train_df,added_data=meta_train_df).element_spec"
    ]
   },
   {
@@ -245,7 +260,16 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "print('Output shape (batch, time, features): ', feedback_model(multi_window.example[0])[0].shape)"
+    "print('Output shape (batch, time, features): ', feedback_model(multi_window.example[0]).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feedback_model.load_weights(f\"Models/{models[-1]}\")\n"
    ]
   },
   {
@@ -318,7 +342,7 @@
     "    model.compile(loss=tf.losses.MeanSquaredError(),\n",
     "                  optimizer=tf.optimizers.Adam(),\n",
     "                  metrics=[tf.metrics.MeanAbsoluteError()])\n",
-    "\n",
+    "    \n",
     "    history = model.fit(window.train, epochs=MAX_EPOCHS,\n",
     "                        validation_data=window.val,\n",
     "                        callbacks=callbacks)\n",
@@ -354,18 +378,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "models = os.listdir(\"Models\")\n",
+    "print(models[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "# mirrored_strategy = tf.distribute.MirroredStrategy()\n",
     "# with mirrored_strategy.scope():\n",
     "feedback_model = FeedBack(units=101, out_steps=OUT_STEPS)\n",
-    "feedback_model(multi_window.example[0])\n",
+    "print(feedback_model(multi_window.example[0]).shape)\n",
     "history = compile_and_fit(feedback_model,\n",
     "                        name=\"LSTM_AR100_Dropout\",\n",
     "                        window =multi_window, \n",
     "                        patience =20, \n",
     "                        MAX_EPOCHS=50,\n",
     "                        record = True,\n",
-    "                        load = \"BenchmarkLSTM@800@24-01-2022-21-11.h5\"\n",
+    "                        load =None\n",
     "                        )\n",
     "\n",
     "IPython.display.clear_output()\n",
@@ -401,7 +435,7 @@
     "exampleCase = 1\n",
     "CaseParameters = InputData[exampleCase]\n",
     "# print(\"W: {}\\nZ: {}\\nX0: {}\\nV0: {}\".format(*CaseParameters))\n",
-    "pred = multi_window.plotCase( data=val_df[:, exampleCase],timesteps= t, model=feedback_model)"
+    "pred = multi_window.plotCase( data=val_df[:, exampleCase],timesteps= t,metadata=meta_val_df[:, exampleCase], model=feedback_model)"
    ]
   },
   {
@@ -433,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
