--- a/LSTMv2.ipynb
+++ b/LSTMv2.ipynb
@@ -112,10 +112,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "InputData.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Split The Data"
+    "# Simple Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from InputPipeline import SimplePipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply Pipeline to make Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = SimplePipeline(num_samples=np.shape(InputData)[0], n_steps=20, xshape=np.shape(t)[0],val_cases = 2,use_metadata=True)\n",
+    "x_inp, y_out= pipe.makeData(data=Data.T,metadata=InputData)\n",
+    "print(f\"Input X Shape: {x_inp.shape}\")\n",
+    "print(f\"Output Y Shape: {y_out.shape}\")\n",
+    "print(f\"Metadata Added Shape: {InputData.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe.plotAlldata(Data.T,t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_inp_train ,y_out_train ,x_inp_val  ,y_out_val = pipe.split_data(x_inp,y_out)\n",
+    "print(x_inp_train.shape, y_out_train.shape, x_inp_val.shape, y_out_val.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Window Input Pipeline\n",
+    "Much More Memory Efficient (100x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from InputPipeline import WindowGenerator,DataPipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split The Data"
    ]
   },
   {
@@ -134,24 +229,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = Data.shape[1]\n",
-    "train_df = Data[:, 0:int(n*0.7):]\n",
-    "meta_train_df = InputData.T[:, 0:int(n*0.7):]\n",
-    "\n",
-    "val_df = Data[:,int(n*0.7):int(n*0.9):]\n",
-    "meta_val_df = InputData.T[:,int(n*0.7):int(n*0.9):]\n",
-    "\n",
-    "test_df = Data[:,int(n*0.9):]\n",
-    "meta_test_df = InputData.T[:,int(n*0.9):]\n",
-    "\n",
-    "num_features = Data.shape[1]\n"
+    "pipe2 = DataPipeline(Data,InputData)\n",
+    "pipe2.splitData(0.8,0.1,0.1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Normalize Data"
+    "## Normalize Data"
    ]
   },
   {
@@ -160,12 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_mean = train_df.mean()\n",
-    "train_std = train_df.std()\n",
-    "\n",
-    "train_df = (train_df - train_mean) / train_std\n",
-    "val_df = (val_df - train_mean) / train_std\n",
-    "test_df = (test_df - train_mean) / train_std"
+    "pipe2.normalizeData()"
    ]
   },
   {
@@ -174,7 +255,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(t,train_df[:,example_ind])\n"
+    "plt.plot(t,pipe2.train_df[:,example_ind])\n",
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -182,15 +265,6 @@
    "metadata": {},
    "source": [
     "# Data Windowing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from window import WindowGenerator"
    ]
   },
   {
@@ -207,9 +281,9 @@
    "outputs": [],
    "source": [
     "wExample = WindowGenerator(input_width=30, label_width=1, shift=1,\n",
-    "                            train_df=train_df,val_df=val_df,test_df=test_df, \n",
+    "                            train_df=pipe2.train_df,val_df=pipe2.val_df,test_df=pipe2.test_df, \n",
     "                            batch_size=5,\n",
-    "                            md_train_df =meta_train_df, md_test_df =meta_test_df,md_val_df=meta_val_df)\n",
+    "                            md_train_df =pipe2.meta_train_df, md_test_df =pipe2.meta_test_df,md_val_df=pipe2.meta_val_df)\n",
     "wExample"
    ]
   },
@@ -226,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wExample.make_dataset(data=train_df,added_data=meta_train_df).element_spec"
+    "wExample.make_dataset(data=pipe2.train_df,added_data=pipe2.meta_train_df).element_spec"
    ]
   },
   {
@@ -251,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot Particular"
+    "### Plot Particular"
    ]
   },
   {
@@ -262,8 +336,8 @@
    "source": [
     "OUT_STEPS = 30\n",
     "wExample2 = WindowGenerator(input_width=30, label_width=OUT_STEPS,\n",
-    "                            shift=OUT_STEPS, train_df=train_df, val_df=val_df, test_df=test_df,batch_size=5,\n",
-    "                            md_train_df =meta_train_df, md_test_df =meta_test_df,md_val_df=meta_val_df)\n"
+    "                            shift=OUT_STEPS, train_df=pipe2.train_df, val_df=pipe2.val_df, test_df=pipe2.test_df,batch_size=5,\n",
+    "                            md_train_df =pipe2.meta_train_df, md_test_df =pipe2.meta_test_df,md_val_df=pipe2.meta_val_df)\n"
    ]
   },
   {
@@ -272,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wExample2.plotCase(train_df[:,3],t)"
+    "wExample2.plotCase(pipe2.train_df[:,3],t)"
    ]
   },
   {
@@ -338,9 +412,9 @@
    "source": [
     "windowOneStep = WindowGenerator(\n",
     "    input_width=30, label_width=1, shift=1,\n",
-    "    train_df=train_df,test_df=test_df,val_df=val_df,\n",
+    "    train_df=pipe2.train_df,test_df=pipe2.test_df,val_df=pipe2.val_df,\n",
     "    batch_size = 1000,\n",
-    "    md_train_df =meta_train_df, md_test_df =meta_test_df,md_val_df=meta_val_df)\n",
+    "    md_train_df =pipe2.meta_train_df, md_test_df =pipe2.meta_test_df,md_val_df=pipe2.meta_val_df)\n",
     "\n",
     "print(windowOneStep)"
    ]
@@ -381,7 +455,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "history = compile_and_fit(model, \"BenchmarkLSTM\",windowOneStep,MAX_EPOCHS=800 ,patience = 100,record = True)\n",
+    "history = compile_and_fit(model, \"BenchmarkLSTM\",windowOneStep,MAX_EPOCHS=800 ,patience = 30,record = True)\n",
     "\n",
     "IPython.display.clear_output()\n",
     "\n",
