--- a/ARvisual.ipynb
+++ b/ARvisual.ipynb
@@ -89,19 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = Data.shape[1]\n",
-    "train_df = Data[:, 0:int(n*0.7):]\n",
-    "val_df = Data[:,int(n*0.7):int(n*0.9):]\n",
-    "test_df = Data[:,int(n*0.9):]\n",
-    "\n",
-    "num_features = Data.shape[1]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Normalize Data"
+    "from InputPipeline import DataPipeline"
    ]
   },
   {
@@ -110,12 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_mean = train_df.mean()\n",
-    "train_std = train_df.std()\n",
-    "\n",
-    "train_df = (train_df - train_mean) / train_std\n",
-    "val_df = (val_df - train_mean) / train_std\n",
-    "test_df = (test_df - train_mean) / train_std"
+    "pipe = DataPipeline(Data,InputData)\n",
+    "pipe.splitData(0.8,0.1,0.1)"
    ]
   },
   {
@@ -124,8 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_ind = 4\n",
-    "plt.plot(t,val_df[:,example_ind])\n"
+    "example_ind = 5\n",
+    "plt.plot(t,pipe.train_df[:,example_ind])\n",
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -141,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from window import WindowGenerator"
+    "from InputPipeline import WindowGenerator"
    ]
   },
   {
@@ -151,13 +137,16 @@
    "outputs": [],
    "source": [
     "OUT_STEPS = 30\n",
-    "multi_window = WindowGenerator(input_width=30,\n",
+    "multi_window = WindowGenerator(input_width=20,\n",
     "                               label_width=OUT_STEPS,\n",
     "                               shift=OUT_STEPS,\n",
-    "                               train_df=train_df,\n",
-    "                               val_df=val_df,\n",
-    "                               test_df=test_df,\n",
-    "                               batch_size = 200)\n",
+    "                               train_df=pipe.train_df,\n",
+    "                               val_df=pipe.val_df,\n",
+    "                               test_df=pipe.test_df,\n",
+    "                               md_train_df= pipe.meta_train_df,\n",
+    "                               md_test_df= pipe.meta_test_df,\n",
+    "                               md_val_df= pipe.meta_val_df,\n",
+    "                               batch_size = 500)\n",
     "\n",
     "multi_window.plotexample()\n",
     "multi_window"
@@ -167,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FeedBack Model"
+    "# Models"
    ]
   },
   {
@@ -176,7 +165,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from network import FeedBack, lstm_model"
+    "from network import FeedBack, lstm_benchmark_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Normal"
    ]
   },
   {
@@ -185,8 +181,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model =  FeedBack(units=101, out_steps=OUT_STEPS)\n",
-    "model(multi_window.example[0]).shape"
+    "model = lstm_benchmark_model(units = 64)\n",
+    "print(f\"Input Shape: {multi_window.example[0].shape}\")\n",
+    "print(f'Output Shape: {model(multi_window.example[0]).shape}')"
    ]
   },
   {
@@ -195,7 +192,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model2 = lstm_model(return_states=False)"
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Autoregressive Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ARmodel =  FeedBack(units=64, out_steps=OUT_STEPS)\n",
+    "print(f\"Input Shape: {multi_window.example[0].shape}\")\n",
+    "print(f'Output Shape: {ARmodel(multi_window.example[0]).shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ARmodel.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Weights"
    ]
   },
   {
@@ -206,7 +237,7 @@
    "source": [
     "models = os.listdir(\"Models/\")\n",
     "print(models)\n",
-    "print(f\"Models/{models[2]}\")"
+    "print(f\"Models/{models[0]}\")"
    ]
   },
   {
@@ -215,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights(f\"Models/BenchmarkLSTM@800@24-01-2022-21-11.h5AR@5024-01-2022-21-30.h5\")"
+    "ARmodel.load_weights(os.path.join(\"Models\", models[0]))"
    ]
   },
   {
@@ -232,7 +263,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "predictions = multi_window.CalcCase(val_df[:,0],t,model)"
+    "predictions = multi_window.CalcCase(pipe.val_df[:,0],pipe.meta_val_df[:,0],t,ARmodel)"
    ]
   },
   {
@@ -250,8 +281,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "steps = 5\n",
-    "predictions = multi_window.plotCase(val_df[:,example_ind],t[:multi_window.input_width+multi_window.label_width*steps],model)"
+    "steps = 1\n",
+    "predictions = multi_window.plotCase(pipe.val_df[:,example_ind],\n",
+    "                                    timesteps = t[:multi_window.input_width+multi_window.label_width*steps],\n",
+    "                                    metadata= pipe.meta_val_df[:,example_ind],\n",
+    "                                    model= ARmodel,\n",
+    "                                    options={\"showLines\" : False,  \"yLabel\" :'x', \"xLabel\" :'Timesteps'})"
    ]
   },
   {
@@ -260,7 +295,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = multi_window.plotCase(val_df[:,example_ind],t,model)"
+    "predictions = multi_window.plotCase(pipe.val_df[:,example_ind],timesteps = t,\n",
+    "                                    metadata = pipe.meta_val_df[:,example_ind],\n",
+    "                                    model=ARmodel)"
    ]
   },
   {
@@ -286,14 +323,14 @@
    "outputs": [],
    "source": [
     "from pltfigure import pltfigure\n",
-    "def animateDataset(dataset,timesteps,name):\n",
+    "def animateDataset(dataset,metadataset,timesteps,name):\n",
     "    predData = []\n",
     "    tFinal = multi_window.input_width+multi_window.label_width*timesteps\n",
     "    with alive_bar(dataset.shape[1]) as bar:\n",
     "        for i in range(dataset.shape[1]):\n",
     "            print(\"\\nTest Case:{}\".format(i))\n",
     "            testCase = dataset[:,i]\n",
-    "            ts  = multi_window.CalcCase(testCase,t[:tFinal],model)\n",
+    "            ts  = multi_window.CalcCase(testCase,metadataset[:,i],t[:tFinal],model)\n",
     "            predData.append(ts)\n",
     "            bar()\n",
     "        predData =np.array(predData)\n",
@@ -307,8 +344,15 @@
    "outputs": [],
    "source": [
     "steps = 10\n",
-    "animateDataset(val_df,steps,f\"Graphs/Prediction@{steps}Steps.gif\")"
+    "animateDataset(pipe.val_df,pipe.meta_val_df,steps,f\"Graphs/Prediction@{steps}Steps.gif\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
