--- a/NetTrain.ipynb
+++ b/NetTrain.ipynb
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wExample = WindowGenerator(input_width=30, label_width=1, shift=1,\n",
+    "wExample = WindowGenerator(input_width=20, label_width=1, shift=1,\n",
     "                            train_df=pipe2.train_df,val_df=pipe2.val_df,test_df=pipe2.test_df, \n",
     "                            batch_size=5,\n",
     "                            md_train_df =pipe2.meta_train_df, md_test_df =pipe2.meta_test_df,md_val_df=pipe2.meta_val_df)\n",
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     "windowOneStep = WindowGenerator(\n",
-    "    input_width=30, label_width=1, shift=1,\n",
+    "    input_width=20, label_width=1, shift=1,\n",
     "    train_df=pipe2.train_df,test_df=pipe2.test_df,val_df=pipe2.val_df,\n",
     "    batch_size = 1000,\n",
     "    md_train_df =pipe2.meta_train_df, md_test_df =pipe2.meta_test_df,md_val_df=pipe2.meta_val_df)\n",
@@ -432,7 +432,7 @@
     "exampleCase = 1\n",
     "CaseParameters = InputData[exampleCase]\n",
     "print(\"W: {}\\nZ: {}\\nX0: {}\\nV0: {}\".format(*CaseParameters))\n",
-    "pred = windowOneStep.plotCase( val_df[:, exampleCase],t, model=model,metadata=InputData[exampleCase],\n",
+    "pred = windowOneStep.plotCase( pipe2.val_df[:, exampleCase],timesteps = t, model=model,metadata=pipe2.meta_val_df[:,exampleCase],\n",
     "                               options = {\"showLines\" : False,  \"yLabel\" :'x', \"xLabel\" :'Timesteps'})"
    ]
   },
@@ -483,9 +483,9 @@
    "source": [
     "predData = []\n",
     "predDataRT = []\n",
-    "for i in range(val_df.shape[1]):\n",
+    "for i in range(pipe2.val_df.shape[1]):\n",
     "    print(i)\n",
-    "    testCase = val_df[:,i]\n",
+    "    testCase = pipe2.val_df[:,i]\n",
     "    testMetaData = InputData[i,:]\n",
     "    ts1 ,ts2 = CalcCase(testCase,windowOneStep,model,metadata=testMetaData)\n",
     "    predData.append(ts1)\n",
@@ -534,7 +534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts1 ,ts2 = CalcCase(val_df[:,3],windowOneStep,model,metadata=meta_val_df[3,:])\n",
+    "ts1 ,ts2 = CalcCase(pipe2.val_df[:,3],windowOneStep,model,metadata=pipe2.meta_val_df[3,:])\n",
     "plotCase(ts1,ts2,windowOneStep,testCase,i)"
    ]
   },
@@ -560,8 +560,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pltfigure(val_df.T,predData,t,\"Data\",\"Prediction\",'Graphs/BenchmarkPred.gif')\n",
-    "pltfigure(val_df.T,predDataRT,t,\"Data\",\"Prediction\",'Graphs/BenchmarkPredRT.gif')"
+    "pltfigure(pipe2.val_df.T,predData,t,\"Data\",\"Prediction\",'Graphs/BenchmarkPred.gif')\n",
+    "pltfigure(pipe2.val_df.T,predDataRT,t,\"Data\",\"Prediction\",'Graphs/BenchmarkPredRT.gif')"
    ]
   }
  ],
@@ -584,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
